# cis194

./: .gitignore  .stan.toml  cabal.project  cabal.project.freeze  lint.bash  shell.nix  weeder.dhall
.reuse/: dep5
homework1/: .stan.toml  homework1.cabal  weeder.dhall
homework1/src/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  TheTowersOfHanoi.hs  ValidatingCreditCardNumbers.hs
homework1/tests/: test-TheTowersOfHanoi.hs  validating-credit-card-numbers.hs
scripts/: lint
spring13/homework1/: .stan.toml  homework1.cabal  weeder.dhall
spring13/homework1/benches/: bench-Exercise2.hs  bench-doubleEveryOther.hs  bench-doubleEveryOtherRev.hs  bench-idealK.hs
spring13/homework1/src/: Exercise2.hs  Exercise6.hs  TheTowersOfHanoi.hs  ValidatingCreditCardNumbers.hs
spring13/homework1/src/Exercise2/: Exercise2.hs
spring13/homework1/src/Exercise5/: Exercise5.hs
spring13/homework1/tests/: TestExercise1.hs  TestExercise2.hs  TestExercise3.hs  TestExercise4.hs  TestExercise5.hs  TestExercise6.hs  test-TheTowersOfHanoi.hs  test-ValidatingCreditCardNumbers.hs
spring13/homework2/: homework2.cabal
spring13/homework2/src/: Exercise1.hs  Exercise2.hs  Exercise4.hs  Log.hs  LogAnalysis.hs
spring13/homework2/src/Exercise1/: Exercise1.hs
spring13/homework2/src/Exercise2/: Exercise2.hs
spring13/homework2/src/Exercise3/: Exercise3.hs
spring13/homework2/src/Exercise4/: Exercise4.hs
spring13/homework2/src/Exercise5/: Exercise5.hs
spring13/homework2/src/Log/: Log.hs
spring13/homework2/src/LogAnalysis/: LogAnalysis.hs
spring13/homework2/tests/: TestData.hs  TestExercise1.hs  TestExercise2.hs  TestExercise3.hs  TestExercise4.hs  TestExercise5.hs  test-LogAnalysis.hs
spring13/homework3/: homework3.cabal
spring13/homework3/src/: Exercise2.hs  Exercise3.hs  Golf.hs
spring13/homework3/src/Exercise1/: Exercise1.hs
spring13/homework3/src/Golf/: Golf.hs
spring13/homework3/tests/: TestExercise1.hs  TestExercise2.hs  TestExercise3.hs  test-Golf.hs
spring13/homework4/: homework4.cabal
spring13/homework4/benches/: bench-sieveSundaram.hs  bench-sundaram.hs
spring13/homework4/src/: Exercise1.hs  Exercise4.hs  Homework4.hs  Tree.hs
spring13/homework4/src/Exercise2/: Exercise2.hs
spring13/homework4/src/Exercise3/: Exercise3.hs
spring13/homework4/src/Exercise4/: Exercise4.hs
spring13/homework4/tests/: TestExercise1.hs  TestExercise2.hs  TestExercise3.hs  TestExercise4.hs  test-Homework4.hs
spring13/homework5/: homework5.cabal
spring13/homework5/src/Calc/: Calc.hs
spring13/homework5/src/Exercise1/: Exercise1.hs
spring13/homework5/src/Exercise2/: Exercise2.hs
spring13/homework5/src/Exercise5/: Exercise5.hs
spring13/homework5/src/Exercise6/: Exercise6.hs
spring13/homework5/src/Expr/: Expr.hs
spring13/homework5/src/ExprT/: ExprT.hs
spring13/homework5/src/Parser/: Parser.hs
spring13/homework5/src/StackVM/: StackVM.hs
spring13/homework5/tests/: TestExercise1.hs  TestExercise2.hs  TestExercise3.hs  TestExercise4.hs  TestExercise5.hs  TestExercise6.hs  test-Calc.hs
spring13/homework6/: homework6.cabal
spring13/homework6/benches/: bench-fibs.hs
spring13/homework6/src/Exercise1/: Exercise1.hs
spring13/homework6/src/Exercise2/: Exercise2.hs
spring13/homework6/src/Exercise4/: Exercise4.hs
spring13/homework6/src/Exercise5/: Exercise5.hs
spring13/homework6/src/Exercise6/: Exercise6.hs
spring13/homework6/src/Exercise7/: Exercise7.hs
spring13/homework6/src/Fibonacci/: Fibonacci.hs
spring13/homework6/src/Stream/: Stream.hs
spring13/homework6/tests/: TestExercise1.hs  TestExercise2.hs  TestExercise4.hs  TestExercise5.hs  TestExercise6.hs  TestExercise7.hs  TestStream.hs
