cabal-version:  3.4
name:           homework1
version:        0.1.0.0

license:        MPL-2.0
author:         ilkecan
maintainer:     ilkecan@protonmail.com

common shared-properties
  default-language: Haskell2010
  build-depends:    base

library
  import:           shared-properties
  hs-source-dirs:
    src/ValidatingCreditCardNumbers
    src/TheTowersOfHanoi
  exposed-modules:
    ValidatingCreditCardNumbers
    TheTowersOfHanoi
  build-depends:
    homework1:exercise1,
    homework1:exercise2,
    homework1:exercise3,
    homework1:exercise4,
    homework1:exercise5,
    homework1:exercise6,

library exercise1
  import:           shared-properties
  hs-source-dirs:   src/Exercise1
  exposed-modules:  Exercise1

library exercise2
  import:           shared-properties
  hs-source-dirs:   src/Exercise2
  exposed-modules:  Exercise2

library exercise3
  import:           shared-properties
  hs-source-dirs:   src/Exercise3
  exposed-modules:  Exercise3
  build-depends:
    homework1:exercise1,

library exercise4
  import:           shared-properties
  hs-source-dirs:   src/Exercise4
  exposed-modules:  Exercise4
  build-depends:
    homework1:exercise1,
    homework1:exercise2,
    homework1:exercise3,

library exercise5
  import:           shared-properties
  hs-source-dirs:   src/Exercise5
  exposed-modules:  Exercise5

library exercise6
  import:           shared-properties
  hs-source-dirs:   src/Exercise6
  exposed-modules:  Exercise6
  build-depends:
    homework1:exercise5,

test-suite homework1
  import:           shared-properties
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Driver.hs
  other-modules:
    TestExercise1
    TestExercise2
    TestExercise3
    TestExercise4
    TestExercise5
    TestExercise6
  build-depends:
    homework1:exercise1,
    homework1:exercise2,
    homework1:exercise3,
    homework1:exercise4,
    homework1:exercise5,
    homework1:exercise6,

    tasty,
    tasty-quickcheck,
    tasty-hunit,

benchmark doubleEveryOther
  import:           shared-properties
  type:             exitcode-stdio-1.0
  hs-source-dirs:   benches
  main-is:          bench-doubleEveryOther.hs
  build-depends:
    homework1:exercise2,
    tasty-bench,

benchmark doubleEveryOtherRev
  import:           shared-properties
  type:             exitcode-stdio-1.0
  hs-source-dirs:   benches
  main-is:          bench-doubleEveryOtherRev.hs
  build-depends:
    homework1:exercise2,
    tasty-bench,

benchmark idealK
  import:           shared-properties
  type:             exitcode-stdio-1.0
  hs-source-dirs:   benches
  main-is:          bench-idealK.hs
  build-depends:
    homework1:exercise6,
    tasty-bench,
