cabal-version:  3.4
name:           homework2
version:        0.1.0.0

license:        MPL-2.0
author:         ilkecan
maintainer:     ilkecan@protonmail.com

common shared-properties
  default-language: Haskell2010
  build-depends:    base

library
  import:           shared-properties
  hs-source-dirs:   src
  exposed-modules:
    Log
    LogAnalysis
  other-modules:
    Exercise1
    Exercise2

test-suite log-analysis
  import:           shared-properties
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          test-LogAnalysis.hs
  build-depends:
    homework2,
    tasty,
    tasty-quickcheck,
    tasty-hunit,
