cabal-version:  3.4
name:           homework2
version:        0.1.0.0

license:        MPL-2.0
author:         ilkecan
maintainer:     ilkecan@protonmail.com

common shared-properties
  default-language: Haskell2010
  build-depends:    base

library
  import:           shared-properties
  hs-source-dirs:   src/LogAnalysis
  exposed-modules:  LogAnalysis
  build-depends:
    homework2:exercise1,
    homework2:exercise2,
    homework2:exercise3,
    homework2:exercise4,
    homework2:exercise5,

library exercise1
  import:           shared-properties
  hs-source-dirs:   src/Exercise1
  exposed-modules:  Exercise1
  build-depends:
    homework2:log,

library exercise2
  import:           shared-properties
  hs-source-dirs:   src/Exercise2
  exposed-modules:  Exercise2
  build-depends:
    homework2:log,

library exercise3
  import:           shared-properties
  hs-source-dirs:   src/Exercise3
  exposed-modules:  Exercise3
  build-depends:
    homework2:log,
    homework2:exercise2,

library exercise4
  import:           shared-properties
  hs-source-dirs:   src/Exercise4
  exposed-modules:  Exercise4
  build-depends:
    homework2:log,

library exercise5
  import:           shared-properties
  hs-source-dirs:   src/Exercise5
  exposed-modules:  Exercise5
  build-depends:
    homework2:log,
    homework2:exercise3,
    homework2:exercise4,

library log
  import:           shared-properties
  hs-source-dirs:   src/Log
  exposed-modules:  Log

test-suite log-analysis
  import:           shared-properties
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Driver.hs
  other-modules:
    TestData
    TestExercise1
    TestExercise2
    TestExercise3
    TestExercise4
    TestExercise5
  build-depends:
    homework2:exercise1,
    homework2:exercise2,
    homework2:exercise3,
    homework2:exercise4,
    homework2:exercise5,
    homework2:log,

    tasty,
    tasty-quickcheck,
    tasty-hunit,
