cabal-version:  3.4
name:           homework3
version:        0.1.0.0

license:        MPL-2.0
author:         ilkecan
maintainer:     ilkecan@protonmail.com

common shared-properties
  default-language: Haskell2010
  build-depends:    base

library
  import:           shared-properties
  hs-source-dirs:   src/Golf
  exposed-modules:  Golf
  build-depends:
    homework3:exercise1,
    homework3:exercise2,
    homework3:exercise3,

library exercise1
  import:           shared-properties
  hs-source-dirs:   src/Exercise1
  exposed-modules:  Exercise1

library exercise2
  import:           shared-properties
  hs-source-dirs:   src/Exercise2
  exposed-modules:  Exercise2

library exercise3
  import:           shared-properties
  hs-source-dirs:   src/Exercise3
  exposed-modules:  Exercise3
  build-depends:
    range,

test-suite golf
  import:           shared-properties
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          test-Golf.hs
  build-depends:
    homework3,
    tasty,
    tasty-quickcheck,
    tasty-hunit,
