cabal-version:  3.4
name:           homework4
version:        0.1.0.0

license:        MPL-2.0
author:         ilkecan
maintainer:     ilkecan@protonmail.com

common shared-properties
  default-language: Haskell2010
  build-depends:    base

library
  import:           shared-properties
  hs-source-dirs:   src
  exposed-modules:
    Homework4
    Tree
  other-modules:
    Exercise1
    Exercise2
    Exercise3
    Exercise4
  build-depends:
    data-ordlist

library exercise3
  import:           shared-properties
  hs-source-dirs:   src
  exposed-modules:  Exercise3

library exercise4
  import:           shared-properties
  hs-source-dirs:   src
  exposed-modules:  Exercise4
  build-depends:
    data-ordlist

test-suite homework4
  import:           shared-properties
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          test-Homework4.hs
  build-depends:
    homework4,
    homework4:exercise3,
    tasty,
    tasty-quickcheck,
    tasty-hunit,

benchmark sundaram
  import:           shared-properties
  type:             exitcode-stdio-1.0
  hs-source-dirs:   benches
  main-is:          bench-sundaram.hs
  build-depends:
    homework4:exercise4,
    tasty-bench,

benchmark sieveSundaram
  import:           shared-properties
  type:             exitcode-stdio-1.0
  hs-source-dirs:   benches
  main-is:          bench-sieveSundaram.hs
  build-depends:
    homework4:exercise4,
    tasty-bench,
