cabal-version:  3.4
name:           homework4
version:        0.1.0.0

license:        MPL-2.0
author:         ilkecan
maintainer:     ilkecan@protonmail.com

common shared-properties
  default-language: Haskell2010
  build-depends:    base

library
  import:           shared-properties
  hs-source-dirs:   src/Homework4
  exposed-modules:
    Homework4
  build-depends:
    homework4:tree,
    homework4:exercise1,
    homework4:exercise2,
    homework4:exercise3,
    homework4:exercise4,
    data-ordlist,

library tree
  import:           shared-properties
  hs-source-dirs:   src/Tree
  exposed-modules:  Tree

library exercise1
  import:           shared-properties
  hs-source-dirs:   src/Exercise1
  exposed-modules:  Exercise1

library exercise2
  import:           shared-properties
  hs-source-dirs:   src/Exercise2
  exposed-modules:  Exercise2
  build-depends:
    homework4:tree,

library exercise3
  import:           shared-properties
  hs-source-dirs:   src/Exercise3
  exposed-modules:  Exercise3

library exercise4
  import:           shared-properties
  hs-source-dirs:   src/Exercise4
  exposed-modules:  Exercise4
  build-depends:
    data-ordlist,

test-suite homework4
  import:           shared-properties
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          test-Homework4.hs
  build-depends:
    homework4,
    homework4:exercise3,
    homework4:tree,
    tasty,
    tasty-quickcheck,
    tasty-hunit,

benchmark sundaram
  import:           shared-properties
  type:             exitcode-stdio-1.0
  hs-source-dirs:   benches
  main-is:          bench-sundaram.hs
  build-depends:
    homework4:exercise4,
    tasty-bench,

benchmark sieveSundaram
  import:           shared-properties
  type:             exitcode-stdio-1.0
  hs-source-dirs:   benches
  main-is:          bench-sieveSundaram.hs
  build-depends:
    homework4:exercise4,
    tasty-bench,
