cabal-version:  3.4
name:           homework5
version:        0.1.0.0

license:        MPL-2.0
author:         ilkecan
maintainer:     ilkecan@protonmail.com

common shared-properties
  default-language: Haskell2010
  build-depends:    base

library
  import:           shared-properties
  hs-source-dirs:   src/Calc
  exposed-modules:  Calc
  build-depends:
    homework5:exercise1,

library expr-t
  import:           shared-properties
  hs-source-dirs:   src/ExprT
  exposed-modules:  ExprT

library exercise1
  import:           shared-properties
  hs-source-dirs:   src/Exercise1
  exposed-modules:  Exercise1
  build-depends:
    homework5:expr-t

test-suite calc
  import:           shared-properties
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          test-Calc.hs
  build-depends:
    homework5,
    homework5:expr-t,
    tasty,
    tasty-quickcheck,
    tasty-hunit,
