cabal-version:  3.4
name:           homework5
version:        0.1.0.0

license:        MPL-2.0
author:         ilkecan
maintainer:     ilkecan@protonmail.com

common shared-properties
  default-language: Haskell2010
  build-depends:    base

library
  import:           shared-properties
  hs-source-dirs:   src/Calc
  exposed-modules:  Calc
  build-depends:
    homework5:exercise1,
    homework5:exercise2,
    homework5:exercise5,
    homework5:exercise6,

library expr-t
  import:           shared-properties
  hs-source-dirs:   src/ExprT
  exposed-modules:  ExprT
  build-depends:
    homework5:expr,

library parser
  import:           shared-properties
  hs-source-dirs:   src/Parser
  exposed-modules:  Parser

library stack-vm
  import:           shared-properties
  hs-source-dirs:   src/StackVM
  exposed-modules:  StackVM
  build-depends:
    homework5:expr,

library exercise1
  import:           shared-properties
  hs-source-dirs:   src/Exercise1
  exposed-modules:  Exercise1
  build-depends:
    homework5:expr-t,

library exercise2
  import:           shared-properties
  hs-source-dirs:   src/Exercise2
  exposed-modules:  Exercise2
  build-depends:
    homework5:parser,
    homework5:expr-t,
    homework5:exercise1,

library expr
  import:           shared-properties
  hs-source-dirs:   src/Expr
  exposed-modules:  Expr

library exercise5
  import:           shared-properties
  hs-source-dirs:   src/Exercise5
  exposed-modules:  Exercise5
  build-depends:
    homework5:expr,
    homework5:stack-vm,
    homework5:parser,

library exercise6
  import:           shared-properties
  hs-source-dirs:   src/Exercise6
  exposed-modules:  Exercise6
  build-depends:
    homework5:expr,
    containers,

test-suite calc
  import:           shared-properties
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          test-Calc.hs
  other-modules:
    TestExercise6
  build-depends:
    homework5,
    homework5:expr-t,
    homework5:expr,
    homework5:parser,
    homework5:stack-vm,
    homework5:exercise6,
    tasty,
    tasty-quickcheck,
    tasty-hunit,
