cabal-version:  3.4
name:           homework6
version:        0.1.0.0

license:        MPL-2.0
author:         ilkecan
maintainer:     ilkecan@protonmail.com

common shared-properties
  default-language: Haskell2010
  build-depends:    base

library
  import:           shared-properties
  hs-source-dirs:   src/Fibonacci
  exposed-modules:  Fibonacci
  build-depends:
    homework6:exercise1,

library exercise1
  import:           shared-properties
  hs-source-dirs:   src/Exercise1
  exposed-modules:  Exercise1

test-suite fibonacci
  import:           shared-properties
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Driver.hs
  other-modules:
    TestExercise1
  build-depends:
    homework6:exercise1,

    tasty,
    tasty-hunit,
    tasty-quickcheck,
