cabal-version:  3.4
name:           homework6
version:        0.1.0.0

license:        MPL-2.0
author:         ilkecan
maintainer:     ilkecan@protonmail.com

common shared-properties
  default-language: Haskell2010
  build-depends:    base

library
  import:           shared-properties
  hs-source-dirs:   src/Fibonacci
  exposed-modules:  Fibonacci
  build-depends:
    homework6:exercise1,
    homework6:exercise2,
    homework6:stream,
    homework6:exercise5,
    homework6:exercise6,

library exercise1
  import:           shared-properties
  hs-source-dirs:   src/Exercise1
  exposed-modules:  Exercise1

library exercise2
  import:           shared-properties
  hs-source-dirs:   src/Exercise2
  exposed-modules:  Exercise2

library stream
  import:           shared-properties
  hs-source-dirs:   src/Stream
  exposed-modules:  Stream

library exercise5
  import:           shared-properties
  hs-source-dirs:   src/Exercise5
  exposed-modules:  Exercise5
  build-depends:
    homework6:stream,

library exercise6
  import:           shared-properties
  hs-source-dirs:   src/Exercise6
  exposed-modules:  Exercise6
  build-depends:
    homework6:stream,

test-suite fibonacci
  import:           shared-properties
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Driver.hs
  other-modules:
    TestExercise1
    TestExercise2
    TestStream
    TestExercise5
    TestExercise6
  build-depends:
    homework6:exercise1,
    homework6:exercise2,
    homework6:stream,
    homework6:exercise5,
    homework6:exercise6,

    tasty,
    tasty-hunit,
    tasty-quickcheck,

benchmark fibs
  import:           shared-properties
  type:             exitcode-stdio-1.0
  hs-source-dirs:   benches
  main-is:          bench-fibs.hs
  build-depends:
    homework6:exercise1,
    homework6:exercise2,

    tasty-bench,
